package tox4j.proto;

option java_package = "im.tox.tox4j.proto";
option optimize_for = LITE_RUNTIME;

message FriendRequest {
    required bytes address = 1;
    required bytes data = 2;
}

message Message {
    required int32 friendNumber = 1;
    required bytes data = 2;
}

message Action {
    required int32 friendNumber = 1;
    required bytes action = 2;
}

message NameChange {
    required int32 friendNumber = 1;
    required bytes newName = 2;
}

message StatusMessage {
    required int32 friendNumber = 1;
    required bytes status = 2;
}

message UserStatus {
    required int32 friendNumber = 1;
    required uint32 status = 2;
}

message TypingStatus {
    required int32 friendNumber = 1;
    required bool typing = 2;
}

message Receipt {
    required int32 friendNumber = 1;
    required uint32 receipt = 2;
}

message ConnectionStatus {
    required int32 friendNumber = 1;
    required bool status = 2;
}

message GroupInvite {
    required int32 friendNumber = 1;
    required uint32 type = 2;
    required bytes data = 3;
}

message GroupMessage {
    required int32 groupNumber = 1;
    required int32 peerNumber = 2;
    required bytes data = 3;
}

message GroupAction {
    required int32 groupNumber = 1;
    required int32 peerNumber = 2;
    required bytes action = 3;
}

message GroupTitleChange {
    required int32 groupNumber = 1;
    required int32 peerNumber = 2;
    required bytes newTitle = 3;
}

message GroupNameListChange {
    required int32 groupNumber = 1;
    required int32 peerNumber = 2;
    required bytes change = 3;
}

message ToxEvents {
    repeated FriendRequest friendRequest = 1;
    repeated Message msg = 2;
    repeated Action action = 3;
    repeated NameChange nameChange = 4;
    repeated StatusMessage sMsg = 5;
    repeated UserStatus uStatus = 6;
    repeated TypingStatus tStatus = 7;
    repeated Receipt receipt = 8;
    repeated ConnectionStatus cStatus = 9;
    repeated GroupInvite gInvite = 10;
    repeated GroupMessage gMessage = 11;
    repeated GroupAction gAction = 12;
    repeated GroupTitleChange gTitleChange = 13;
    repeated GroupNameListChange gNameListChange = 14;
}
